checkpoint for experiment
